static/style.css
@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,900;1,300;1,400;1,500;1,600;1,700;1,900&display=swap');

html, body{
    font-family: Sofia Sans, Arial;
    width: 100%;
    height: 100%;
    background-color: black;
}

#header {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    background-color: white;
    overflow: auto;
    width: 300px;
    transition: all ease-in-out 0.5s;
    padding: 0 15px;
    z-index: auto;
}

#header .profile img{
    margin: 15px auto;
    display: block;
    width: 120px;
    border: 8px solid black;
    border-radius: 50%;
}

#header .profile h1{
    font-size: 30px;
    margin: 0;
    padding: 0.5rem;
    font-weight: 700;
    text-align: center;
    color: black;
}

#header .profile .social-links a {
    font-size: 1rem;
    background: black;
    color: white;
    padding: 0.3rem;
    margin-right: 0.5rem;
    margin-left: 0.5rem;
    border-radius: 50%;
    transition: 0.3s;
    text-decoration: none;
}

#header .profile .social-links a:hover {
    background: white;
    color: black;
}

.nav-menu{
    padding: 1.5rem;
}

.nav-menu a,
.nav-menu a:focus {
    display: flex;
    align-items: center;
    color: black;
    transition: 0.3s;
    font-size: 15px;
}

.nav-menu a i,
.nav-menu a:focus i {
    font-size: 24px;
    padding-right: 0.8rem;
    color: black;
}

.nav-menu a:hover,
.nav-menu .active,
.nav-menu .active:focus
.nav-menu li:hover > a {
    text-decoration: none;
    color: black;
    font-size: 24px;
}

.nav-menu a:hover i,
.nav-menu .active i,
.nav-menu .active:focus i,
.nav-menu li:hover > a i {
    text-decoration: none;
    font-size: 24px;
}

#main{
    margin-left: 300px;
}

section#home{
    background-image: url("./img/backgroud.gif");
    background-repeat: no-repeat;
    background-size: cover;
    background-attachment: fixed;
    background-position: center;
    width: 100%;
    height: 100vh;
}

section#home h2{
    font-size: 4rem;
}


.text-shadow {
    text-shadow: 4px 4px 10px black;
}

i.menu-mobile {
    position: fixed;
    color: white;
    background-color: black;
    right: 1rem;
    top: 1rem;
    font-size: 1.5rem;
    border-radius: 4rem;
    cursor: pointer;
    z-index: 10;
    width: 45px;
    height: 45px;
    display: none;
    justify-content: center;
    align-items: center;
}

.menu-nav-active {
    overflow: hidden;
}

.menu-nav-active #header {
    left: 0;
}

@media (max-width: 1600px) {
    #header {
        left: -300px;
    }
    i.menu-mobile{
        display: flex;
    }
    section#home h2{
        font-size: 2.5rem;
    }
    #main{
        margin-left: 0;
    }
}

.section-bg{
    background-color: #090909;

}

.cv-title{
    font-weight: 700;
    margin-top: 20px;
    margin-bottom: 20px;
}

.cv-item{
    padding: 0 0 20px 20px;
    margin-top: -2px;
    border-left: 2px solid white;
    position: relative;
}

.cv-item h5{
    padding: 5px 0px;
    background-color: #090909;
    display: inline-block;
    font-weight: 600;
    margin-top: 10px;
}
  
  .carousel-control-prev{
    margin-left: -8rem;
    filter: invert(100%);
  }
  
  .carousel-control-next{
    margin-right: -8rem;
    filter: invert(100%);
  }
  
  .carousel-indicators{
    margin-bottom: -35px;
    filter: invert(100%);
  }
  
  @media (max-width: 1860px){
    .carousel-control-prev{
      margin-left: 0;
      filter: invert(100%);
    }
  
    .carousel-control-next{
      margin-right: 0;
      filter: invert(100%);
    }
  }

